# lang-notes

./: .gitignore
server/: db.js  (+4 more)
server-rs/: Cargo.toml
server-rs/src/: main.rs
server-rs/src/api/: mod.rs
server-rs/src/api/cluster/: delete_cluster.rs  mod.rs  post.rs  post_cluster.rs
server-rs/src/api/definition/: delete_definition.rs  get_definition.rs  mod.rs  post.rs  post_definition.rs  update_definition.rs
server-rs/src/api/example/: delete_example.rs  get_example.rs  mod.rs  post_example.rs  update_example.rs
server-rs/src/api/key_search/: mod.rs  select_keys.sql
server-rs/src/api/language/: delete_lang.rs  get_lang.rs  mod.rs  post_lang.rs  update_lang.rs
server-rs/src/api/search/: mod.rs
server-rs/src/api/translation/: delete_translation.rs  get_translation.rs  mod.rs  post_translation.rs  update_translation.rs
server-rs/src/api/words_group/: delete_words_group.rs  get_words_group.rs  mod.rs  post_words_group.rs  update_words_group.rs
server-rs/src/error/: mod.rs
server-rs/src/schema/: clusters.rs  definitions.rs  examples.rs  languages.rs  mod.rs  translations.rs  word_groups.rs
server-rs/src/schema/sql/cluster/: insert.sql
server-rs/src/schema/sql/clusters/: up.sql
server-rs/src/schema/sql/clusters/search/: get_def_ids_by_translation.sql  (+2 more)
server-rs/src/schema/sql/definitions/: insert.sql  up.sql
server-rs/src/schema/sql/examples/: insert.sql  up.sql
server-rs/src/schema/sql/languages/: insert.sql  up.sql
server-rs/src/schema/sql/translations/: insert.sql  up.sql
server-rs/src/schema/sql/word_groups/: insert.sql  up.sql
(+22 files in other folders)
