[package]
name = "server-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
lazy_static = "1.4.0"
postgres = { version = "0.19.2", features = [ "array-impls" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"